--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-password-strength-bar": "^0.4.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
